--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <b>Sunday July 9 9:00 - 12:30 (EDT) @ Metropolitan Centre</b>
           </div>
           <div class="is-size-5 publication-authors">
-            We will take Q&A through Rocket.Chat: <a href="https://acl.rocket.chat/channel/tutorial-2" target="_blank"><b>tinyurl.com/retrieval-lm-tutorial</b></a>
+            We will take Q&A through Rocket.Chat: <a href="https://acl.rocket.chat/channel/tutorial-2" target="_blank"><b>https://acl.rocket.chat/channel/tutorial-2</b></a>
           </div>
           <br />
           <div class="is-size-6 publication-authors">
