--- a/index.html
+++ b/index.html
@@ -167,42 +167,42 @@
           <tbody>
             <tr>
               <td class="tg-0lax">9:00—9:15</td>
-              <td class="tg-0lax">Section 1: Introduction  <a href="" target='_blank'>[Slides]</a></td>
+              <td class="tg-0lax">Section 1: Introduction  <a href="./slides/1.pdf" target='_blank'>[Slides]</a></td>
               <td class="tg-0lax">Wenting</td>
             </tr>
             <tr>
               <td class="tg-0lax">9:15—9:40</td>
-              <td class="tg-0lax">Section 2: Benchmarks & Evaluation <a href="" target='_blank'>[Slides]</a></td>
+              <td class="tg-0lax">Section 2: Benchmarks & Evaluation <a href="./slides/2.pdf" target='_blank'>[Slides]</a></td>
               <td class="tg-0lax">Mor</td>
             </tr>
             <tr>
               <td class="tg-0lax">9:40—10:05</td>
-              <td class="tg-0lax">Section 3: Knowledge-Augmented Approaches after Pretraining <a href="" target='_blank'>[Slides]</a></td>
-              <td class="tg-0lax">Sewon</td>
+              <td class="tg-0lax">Section 3: Knowledge-Augmented Approaches after Pretraining <a href="./slides/3.pdf" target='_blank'>[Slides]</a></td>
+              <td class="tg-0lax">Yuchen</td>
             </tr>
             <tr>
               <td class="tg-0lax">10:05—10:30</td>
-              <td class="tg-0lax">Section 4: Knowledge-augmented Approaches during Pretraining <a href="" target='_blank'>[Slides]</a></td>
+              <td class="tg-0lax">Section 4: Knowledge-augmented Approaches during Pretraining <a href="./slides/4.pdf" target='_blank'>[Slides]</a></td>
               <td class="tg-0lax">Michi</td>
             </tr>
             <tr>
-              <td class="tg-0lax">15:30—16:00</td>
+              <td class="tg-0lax">10:30—11:00</td>
               <td class="tg-0lax">Coffee break</td>
               <td class="tg-0lax"></td>
             </tr>
             <tr>
-              <td class="tg-0lax">16:00—16:25</td>
-              <td class="tg-0lax">Section 5: Few-shot Prompting Approaches  <a href="" target='_blank'>[Slides]</a></td>
+              <td class="tg-0lax">11:00—11:30</td>
+              <td class="tg-0lax">Section 5: Few-shot Prompting Approaches  <a href="./slides/5.pdf" target='_blank'>[Slides]</a></td>
               <td class="tg-0lax">Aman</td>
             </tr>
             <tr>
-              <td class="tg-0lax">16:25—17:00</td>
-              <td class="tg-0lax">Section 6: Neuro-symbolic approaches: LLMs + Tool Use <a href="" target='_blank'>[Slides]</a></td>
+              <td class="tg-0lax">11:30—12:00</td>
+              <td class="tg-0lax">Section 6: Neuro-symbolic approaches: LLMs + Tool Use <a href="./slides/6.pdf" target='_blank'>[Slides]</a></td>
               <td class="tg-0lax">Tao</td>
             </tr>
             <tr>
-              <td class="tg-0lax">17:00—17:10</td>
-              <td class="tg-0lax">Section 7: Rationale-based approaches & Conclusions <a href="" target='_blank'>[Slides]</a></td>
+              <td class="tg-0lax">12:00—12:30</td>
+              <td class="tg-0lax">Section 7: Rationale-based approaches & Conclusions <a href="./slides/7.pdf" target='_blank'>[Slides]</a></td>
               <td class="tg-0lax">Wenting</td>
             </tr>
           </tbody>
