--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                 <!-- <th scope="row">TR-7</th> -->
                 <td width="25%" style="text-align: center"><a href="https://wenting-zhao.github.io/" style="border-radius: 50%">Wenting Zhao</a><sup>1</sup>,</td>
                 <td width="25%" style="text-align: center"><a href="https://mega002.github.io/" style="border-radius: 50%">Mor Geva</a><sup>2</sup>,</td>
-                <td width="25%" style="text-align: center"><a href="https://yuchenlin.xyz/" style="border-radius: 50%">Bill Yuchen Lin</a><sup>3</sup>,</td>
-                <td width="25%" style="text-align: center"><a href="https://cs.stanford.edu/~myasu/" style="border-radius: 50%">Michihiro Yasunaga</a><sup>4</sup></td>
+                <td width="25%" style="text-align: center"><a href="https://yuchenlin.xyz/" style="border-radius: 50%">Yuchen Lin</a><sup>3</sup>,</td>
+                <td width="25%" style="text-align: center"><a href="https://cs.stanford.edu/~myasu/" style="border-radius: 50%">Michi Yasunaga</a><sup>4</sup></td>
                 <td width="25%" style="text-align: center"><a href="https://yuchenlin.xyz/" style="border-radius: 50%">Aman Madaan</a><sup>5</sup></td>
                 <td width="25%" style="text-align: center"><a href="https://taoyds.github.io/" style="border-radius: 50%">Tao Yu</a><sup>6</sup></td>
 
@@ -78,12 +78,12 @@
             </span>
           </div>
           <div class="is-size-6 publication-authors">
-            <span class="author-block"><sup>1</sup>Cornell University,</span>
+            <span class="author-block"><sup>1</sup>Cornell,</span>
             <span class="author-block"><sup>2</sup>Google,</span>
-            <span class="author-block"><sup>2</sup>AI2,</span>
-            <span class="author-block"><sup>2</sup>Stanford University,</span>
-            <span class="author-block"><sup>2</sup>Carnegie Mellon University,</span>
-            <span class="author-block"><sup>2</sup>The University of Hong Kong,</span>
+            <span class="author-block"><sup>3</sup>AI2,</span>
+            <span class="author-block"><sup>4</sup>Stanford,</span>
+            <span class="author-block"><sup>5</sup>CMU,</span>
+            <span class="author-block"><sup>6</sup>HKU</span>
           </div>
           <br />
           <div class="is-size-5 publication-authors">
