--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                 <!-- <th scope="row">TR-7</th> -->
                 <td width="25%" style="text-align: center; padding: 3px"><img width="150px" height="150px" src="static/imgs/profile_wenting.jpeg"></td>
                 <td width="25%" style="text-align: center; padding: 3px"><img width="150px" height="150px" src="static/imgs/profile_mor.jpeg"></td>
-                <td width="25%" style="text-align: center; padding: 3px"><img width="150px" height="150px" src="static/imgs/profile_yuchen.png"></td>
-                <td width="25%" style="text-align: center; padding: 3px"><img width="150px" height="150px" src="static/imgs/profile_michi.png"></td>
-                <td width="25%" style="text-align: center; padding: 3px"><img width="150px" height="150px" src="static/imgs/profile_aman.png"></td>
-                <td width="25%" style="text-align: center; padding: 3px"><img width="150px" height="150px" src="static/imgs/profile_tao.png"></td>
+                <td width="25%" style="text-align: center; padding: 3px"><img width="150px" height="150px" src="static/imgs/profile_yuchen.jpeg"></td>
+                <td width="25%" style="text-align: center; padding: 3px"><img width="150px" height="150px" src="static/imgs/profile_michi.jpeg"></td>
+                <td width="25%" style="text-align: center; padding: 3px"><img width="150px" height="150px" src="static/imgs/profile_aman.jpeg"></td>
+                <td width="25%" style="text-align: center; padding: 3px"><img width="150px" height="150px" src="static/imgs/profile_tao.jpeg"></td>
 
             </tr>
               <tr>
