--- a/index.html
+++ b/index.html
@@ -56,22 +56,36 @@
               <table>
             <tr>
                 <!-- <th scope="row">TR-7</th> -->
-                <td width="16%" style="text-align: center; padding: 0px"><img width="100px" height="100px" src="static/imgs/profile_wenting.jpeg"></td>
-                <td width="16%" style="text-align: center; padding: 0px"><img width="100px" height="100px" src="static/imgs/profile_mor.jpeg"></td>
-                <td width="16%" style="text-align: center; padding: 0px"><img width="100px" height="100px" src="static/imgs/profile_yuchen.jpeg"></td>
-                <td width="16%" style="text-align: center; padding: 0px"><img width="100px" height="100px" src="static/imgs/profile_michi.jpeg"></td>
-                <td width="16%" style="text-align: center; padding: 0px"><img width="100px" height="100px" src="static/imgs/profile_aman.jpeg"></td>
-                <td width="16%" style="text-align: center; padding: 0px"><img width="100px" height="100px" src="static/imgs/profile_tao.jpeg"></td>
+                <td width="25%" style="text-align: center; padding: 3px"><img width="150px" height="150px" src="static/imgs/profile_wenting.jpeg"></td>
+                <td width="25%" style="text-align: center; padding: 3px"><img width="150px" height="150px" src="static/imgs/profile_mor.jpeg"></td>
+                <td width="25%" style="text-align: center; padding: 3px"><img width="150px" height="150px" src="static/imgs/profile_yuchen.jpeg"></td>
 
             </tr>
               <tr>
                 <!-- <th scope="row">TR-7</th> -->
                 <td width="25%" style="text-align: center"><a href="https://wenting-zhao.github.io/" style="border-radius: 50%">Wenting Zhao</a><sup>1</sup>,</td>
-                <td width="25%" style="text-align: center"><a href="https://mega002.github.io/" style="border-radius: 50%">Mor Geva</a><sup>2</sup>,</td>
-                <td width="25%" style="text-align: center"><a href="https://yuchenlin.xyz/" style="border-radius: 50%">Yuchen Lin</a><sup>3</sup>,</td>
-                <td width="25%" style="text-align: center"><a href="https://cs.stanford.edu/~myasu/" style="border-radius: 50%">Michi Yasunaga</a><sup>4</sup></td>
-                <td width="25%" style="text-align: center"><a href="https://yuchenlin.xyz/" style="border-radius: 50%">Aman Madaan</a><sup>5</sup></td>
-                <td width="25%" style="text-align: center"><a href="https://taoyds.github.io/" style="border-radius: 50%">Tao Yu</a><sup>6</sup></td>
+                <td width="25%" style="text-align: center"><a href="https://mega002.github.io/" style="border-radius: 50%">Mor Geva*</a><sup>2</sup>,</td>
+                <td width="25%" style="text-align: center"><a href="https://yuchenlin.xyz/" style="border-radius: 50%">Yuchen Lin*</a><sup>3</sup>,</td>
+
+              </tr>
+            </table>
+            </span>
+          </div>
+          <div class="is-size-5 publication-authors">
+            <span class="author-block">
+              <table>
+            <tr>
+                <!-- <th scope="row">TR-7</th> -->
+                <td width="25%" style="text-align: center; padding: 3px"><img width="150px" height="150px" src="static/imgs/profile_michi.jpeg"></td>
+                <td width="25%" style="text-align: center; padding: 3px"><img width="150px" height="150px" src="static/imgs/profile_aman.jpeg"></td>
+                <td width="25%" style="text-align: center; padding: 3px"><img width="150px" height="150px" src="static/imgs/profile_tao.jpeg"></td>
+
+            </tr>
+              <tr>
+                <!-- <th scope="row">TR-7</th> -->
+                <td width="25%" style="text-align: center"><a href="https://cs.stanford.edu/~myasu/" style="border-radius: 50%">Michi Yasunaga*</a><sup>4</sup></td>
+                <td width="25%" style="text-align: center"><a href="https://yuchenlin.xyz/" style="border-radius: 50%">Aman Madaan*</a><sup>5</sup></td>
+                <td width="25%" style="text-align: center"><a href="https://taoyds.github.io/" style="border-radius: 50%">Tao Yu*</a><sup>6</sup></td>
 
               </tr>
             </table>
@@ -84,6 +98,9 @@
             <span class="author-block"><sup>4</sup>Stanford,</span>
             <span class="author-block"><sup>5</sup>CMU,</span>
             <span class="author-block"><sup>6</sup>HKU</span>
+          </div>
+          <div class="is-size-6 publication-authors">
+            <span class="author-block"><sup>*</sup>Equal Contribution</span>
           </div>
           <br />
           <div class="is-size-5 publication-authors">
