--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
               compositional reasoning, knowledge retrieval, grounding, commonsense reasoning, etc.
           </p>
           <p>
-              A standard choice for building systems that perform a desired type of reasoning is to fine-tune a pretrained language model (LM) 
+              A standard choice for building systems that perform a desired type of reasoning is to fine-tune or prompt a language model (LM) 
               on specific downstream tasks. However, recent research has demonstrated that such a straightforward approach is often brittle, and that 
               the reasoning capabilities of these models thus remain at a surface level, i.e., exploiting data patterns.
               Consequently, augmenting LMs with techniques that make them robust and effective becomes an active research area.
