--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="column has-text-centered">
           <h1 class="title is-2 publication-title">
               <span style="font-size: 80%">ACL 2023 Tutorial:</span><br />
-              Retrieval-based Language Models and Applications
+              Complex Reasoning in Natural Language 
             </h1>
 
           <div class="is-size-5 publication-authors">
@@ -231,7 +231,7 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{ retrieval-lm-tutorial,
+    <pre><code>@article{ complex-reasoning-tutorial,
   author    = { Zhao, Wenting and Geva, Mor and Lin, Bill Yuchen and Yasunaga, Michihiro and Madaan, Aman and Yu, Tao},
   title     = { ACL 2023 Tutorial: Complex Reasoning in Natural Language },
   journal   = { ACL 2023 },
@@ -244,7 +244,7 @@
 <footer class="footer">
   <div class="container">
     <div class="content has-text-centered">
-      <a class="icon-link" href="https://github.com/ACL2023-Retrieval-LM" class="external-link" disabled>
+      <a class="icon-link" href="https://wenting-zhao.github.io/complex-reasoning-tutorial/" class="external-link" disabled>
         <i class="fab fa-github"></i>
       </a>
     </div>
