--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           </div>
           <br />
           <div class="is-size-6 publication-authors">
-            <em>Slides may be subject to updates</em>
+            <em>Slides may be subject to updates, and full paper lists will be up soon</em>
           </div>
         </div>
       </div>
